# rustsevendays

./: .gitignore  Cargo.toml  NOTES.md
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day19/: Cargo.toml
day2/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml  playbook.yaml
day25/: Cargo.toml
day26/: Cargo.toml
day27/: Cargo.toml
day28/: Cargo.toml
day29/: Cargo.toml  Notes.MD
day3/: Cargo.toml
day30/: Cargo.toml
day31/: Cargo.toml
day32/: Cargo.toml  create.sql
day33/: Cargo.toml
day34/: Cargo.toml
day35/: Cargo.toml
day36/: Cargo.toml
day37/: Cargo.toml
day38/: Cargo.toml
day39/: Cargo.toml
day40/: Cargo.toml
day41/: Cargo.toml
day42/: Cargo.toml
day43/: Cargo.toml
day44/: Cargo.toml
day45/: Cargo.toml
day46/: Cargo.toml
day47/: Cargo.toml
day48/: Cargo.toml
day49/: Cargo.toml
day5/: Cargo.toml
day50/: Cargo.toml
day6/: Cargo.toml
day7/: Cargo.toml
day8/: Cargo.toml
day9/: Cargo.toml
src/: barycenter.rs  closure.rs  enums.rs  fib.rs  fsm.rs  genericfunction.rs  generictypes.rs  iterators.rs  lib.rs  main.rs  maps.rs  mytraits.rs  ownership.rs  parse.rs  randguess.rs  slices.rs  structs.rs
templates/: index.html
(+78 files in other folders)
