[package]
name = "sevenday"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
itertools = "0.10.1"
rayon = "1"
#primal = "0.2"
# card_deck = {path="../../mlibs/card_check"} local library
#

[workspace]
members = [
    "day2",
    "day3",
    "day4",
    "day5",
    "day5",
    "day6",
    "day7",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
    "day25",
    "day26",
    "day27",
    "day28",
    "day29",
]
